5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1724_2525.log
== TEST (2019-05-13 21:44:11) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qt + 1
	if(nu == 0):
		print(i)
	else:
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:44:27) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qt + 1
	if(nu == 0):
		print(i)
	else:
-- ERROR:
File "XXXX", line 11
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:45:38) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qt + 1
	if(nu == 0):
		print(i)
	else:
		nu = nu
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qd = qt + 1
NameError: name 'qt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:45:49) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qt + 1
	if(nu == 0):
		print(i)
	else:
		nu = nu
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qd = qt + 1
NameError: name 'qt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:46:56) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qt + 1
	if(nu == 0):
		print(i)
	else:
		nu = nu
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    qd = qt + 1
NameError: name 'qt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:47:08) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qd + 1
	if(nu == 0):
		print(i)
	else:
		nu = nu
-- OUTPUT:
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:48:01) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qd + 1
	i = i+1
	if(nu == 0):
		print(i)
	else:
		nu = nu
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:49:56) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % 2
	qd = qd + 1
	i = i + 1
	if(nu == 0):
		print(i,nu)
	else:
		nu = nu
-- OUTPUT:
1 0
2 0
3 0
4 0
5 0
6 0
7 0
8 0
9 0
10 0
11 0
12 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:53:03) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 0
while(i < n):
	nu = n % i
	qd = qd + 1
	i = i + 1
	if(nu == 0):
		print(nu,i)
	else:
		nu = nu
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    nu = n % i
ZeroDivisionError: integer division or modulo by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:53:24) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
while(i < n):
	nu = n % i
	qd = qd + 1
	i = i + 1
	if(nu == 0):
		print(nu,i)
	else:
		nu = nu
-- OUTPUT:
0 2
0 3
0 4
0 5
0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:02) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
while(i < n):
	nu = n % i
	qd = qd + 1
	i = i + 1
	if(nu == 0):
		print(nu,i)
	else:
		nu = nu
-- OUTPUT:
0 2
0 3
0 4
0 5
0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:54:58) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
while(i < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(nu,i)
	else:
		nu = nu
-- OUTPUT:
0 2
0 3
0 4
0 5
0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:56:17) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(nu,i)
	else:
		nu = nu
-- OUTPUT:
0 2
0 3
0 4
0 5
0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 21:57:45) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(nu,i-1)
		qd = qd + 1
	else:
		nu = nu
-- OUTPUT:
0 2
0 3
0 4
0 5
0 7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:15) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(nu,i-1)
		qd = qd + 1
	else:
		nu = nu
if(qd == 1):
	print(qd," divisor")
else:
print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:33) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(nu,i-1)
		qd = qd + 1
	else:
		nu = nu
if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:00:47) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu
if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:01:18) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu
if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:05:39) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu
if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:06:28) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1
fim = i - 1
while(fim < n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- ERROR:
File "XXXX", line 17
    print(qd,"divisores")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:08:12) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:08:28) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:09:13) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:11:46) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:14:46) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:14:51) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:25) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:32) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:15:44) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:16:49) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:17:57) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:18:04) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- OUTPUT:
1
2
3
4
6
12
6 divisores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:22:01) 
-- CODE:
n = int(input("numero: "))

qd=0
i = 1

while(i <= n):
	nu = n % i
	i = i + 1
	if(nu == 0):
		print(i-1)
		qd = qd + 1
	else:
		nu = nu

if(qd == 1):
	print(qd," divisor")
else:
	print(qd,"divisores")
-- EXECUTION TIME:
0.220075
-- TEST CASE 1:
---- input:
12
---- correct output:
1
2
3
4
6
12
6 divisores
---- user output:
1
2
3
4
6
12
6 divisores
-- TEST CASE 2:
---- input:
49
---- correct output:
1
7
49
3 divisores
---- user output:
1
7
49
3 divisores
-- TEST CASE 3:
---- input:
30
---- correct output:
1
2
3
5
6
10
15
30
8 divisores
---- user output:
1
2
3
5
6
10
15
30
8 divisores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
